<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobiletek.wifitransport.ConnectActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_connect_type"
        android:layout_above="@+id/radio_group"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/radio_group"
        android:layout_centerInParent="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/as_hotspot"
            android:id="@+id/radioAsAp"
            android:layout_gravity="left"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_to_hotspot"
            android:id="@+id/radioConnectAp"
            android:layout_below="@+id/radioAsAp"
            android:layout_gravity="left"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RadioGroup>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_Connect"
        android:visibility="gone"
        android:layout_below="@+id/radio_group"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
